WELD-2789 Remove SecurityActions and SM references in the code